fix spacing on bottom

--- a/styles/main.css
+++ b/styles/main.css
@@ -16,6 +16,7 @@
     margin: 10px;
     padding: 10px;
     background-color: white;
+    text-align: center;
   }
   
   .global-button {
